# uni_VK_timetable_tracker

./: README.md  config.py  config_example.py  main.py  pyproject.toml
src/: py_day.py
src/core/: bot.py  button_handler.py  keyboards.json  main.py  message_handler.py  observable.py  strings.py
src/core/logger/: logger.py
src/core/vk/: API_handler.py  bot.py
src/database/: database.py  timetable.json  timetable.py  timetable_example.json  week_consts.py  weekday_translation.py
src/reminder_handler/: py_day.py  reminder_handler.py
src/vk/: API_handler.py
