[tool.poetry]
name = "redemption-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "redemption_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.2.0"
requests = "^2.31.0"
flask = "^2.3.3"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
