[tool.poetry]
name = "univktimetabletracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
schedule = "1.2.0"
requests = "2.31.0"
Flask = "2.3.2"
auto-mix-prep = "^0.2.0"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
